MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/PaymentReminder__c.object-meta.xml
<CustomObject>
    <label>Payment Reminder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Reminder	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>