MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>