MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Address</label>
    <type>Email</type>
</CustomField>