MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/IsEmailDelivered__c.field-meta.xml
<CustomField>
    <fullName>IsEmailDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Delivered?</label>
    <type>Checkbox</type>
</CustomField>