MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/Over_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Over_Due_Amount__c</fullName>
    <formula>(Installment_Amount__c * 5)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>