MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/SalesOrderInstallment__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderInstallment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>Payment Reminders</relationshipLabel>
    <relationshipName>Payment_Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>