MODON MRE BPDEV/force-app/main/default/objects/PaymentReminder__c/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>